data/derived/comb/progs/unify/prog3997.ml.out
Characters 96-100:
  | head::tail -> listReverse tail @ head;;
                                     ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
